# gym-register-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  compose.app.yml  compose.db.yml  compose.dev.yml  compose.prod.yml
migrations/2024-02-07-005720_create_user_table/: up.sql
migrations/2024-02-11-204116_change_user_table_name_to_users/: down.sql  up.sql
migrations/2024-02-11-204525_update_users_email_to_be_unique/: up.sql
seed/: users.sql
src/: config.rs  database.rs  main.rs  schema.rs
src/auth/: custom_errs.rs  dtos.rs  mod.rs  register.rs  token.rs  validators.rs
src/users/: dtos.rs  repository.rs  utils.rs
tests/: auth.rs  database.rs  setup.rs
