[package]
name = "gym-register-api"
version = "0.1.0"
edition = "2021"
authors = ["Kaique Pacheco"]

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
dotenvy = { version = "0.15.7" }

diesel = { version = "2.1.4", features = ["uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }

uuid = { version = "1.7.0" }