[package]
name = "gym-register-api"
version = "0.1.0"
edition = "2021"
authors = ["Kaique Pacheco"]

[dependencies]
rocket = { version = "0.5.0", features = ["json", "uuid"] }
dotenvy = { version = "0.15.7" }

# Database
diesel = { version = "2.1.4", features = ["uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }

# Id
uuid = { version = "1.7.0" }

# Encryption
jwt = { version = "0.16.0" }
bcrypt = { version = "0.15.0" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.8" }